# sfml-infinit-run

./: .gitignore  CMakeLists.txt  README.md
inc/: Animations.hpp  ColisionDetection.hpp  CollisionDetection.hpp  InitialValues.hpp  Movement.hpp  WallsRepositioning.hpp
src/: Animations.cpp  ColisionDetection.cpp  CollisionDetection.cpp  InitialValues.cpp  Movement.cpp  WallsRepositioning.cpp
src/main/: main.cpp
unit-tests/: Collision-test.cpp  Movement-test.cpp  master.cpp
